# ChangeLog for media-sound/hydrogen
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/hydrogen/ChangeLog,v 1.19 2004/08/18 02:06:20 fvdpol Exp $

*hydrogen-0.9.0_beta1 (18 Aug 2004)

  18 Aug 2004; <frank@gentoo.org> +files/hydrogen-0.9.0_beta1-math.patch,
  +hydrogen-0.9.0_beta1.ebuild:
  Version bump to 0.9.0_beta1. Closes bug #59580.

  26 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  hydrogen-0.8.2-r4.ebuild:
  Stable amd64 and x86.

*hydrogen-0.8.2-r4 (01 Jul 2004)

  01 Jul 2004; Frank van de Pol <fvdpol@gentoo.org>
  +files/hydrogen-0.8.2-gcc34.patch, +hydrogen-0.8.2-r4.ebuild:
  New revision to fix a gcc-3.4 compilation error. Closes bug #52185

*hydrogen-0.8.2-r3 (23 Jun 2004)

  23 Jun 2004; Frank van de Pol <fvdpol@gentoo.org> +hydrogen-0.8.2-r3.ebuild:
  New revision with reworked installation of drumkits and demo songs. Includes
  new kits, closing bug #54570.

  19 Jun 2004; David Holm <dholm@gentoo.org> hydrogen-0.8.2-r2.ebuild:
  Added to ~ppc.

*hydrogen-0.8.2-r2 (19 Jun 2004)

  19 Jun 2004; Frank van de Pol <fvdpol@gentoo.org>
  +files/hydrogen-0.8.2-64bit.patch, +hydrogen-0.8.2-r2.ebuild:
  Added patch to fix noise on amd64. Closes bug #54340

*hydrogen-0.8.2-r1 (18 Jun 2004)

  18 Jun 2004; Frank van de Pol <fvdpol@gentoo.org> metadata.xml,
  +files/hydrogen-0.8.2-ui-spacer.patch, +hydrogen-0.8.2-r1.ebuild:
  Compilation fixes, thanks to Michael Schnake <schnake@composition.de>
  closes bug #46568

  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  hydrogen-0.8.1-r1.ebuild, hydrogen-0.8.1.ebuild, hydrogen-0.8.2.ebuild:
  Getting rid of virtual/jack.

  28 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  hydrogen-0.8.2.ebuild:
  Stable x86.

  03 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  hydrogen-0.8.0.ebuild, hydrogen-0.8.1-r1.ebuild, hydrogen-0.8.1.ebuild,
  hydrogen-0.8.1_beta5.ebuild, hydrogen-0.8.2.ebuild: