@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/hydrogen
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/hydrogen/ChangeLog,v 1.19 2004/08/18 02:06:20 fvdpol Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/hydrogen/ChangeLog,v 1.20 2004/08/20 18:11:13 fvdpol Exp $
+
+  20 Aug 2004; <frank@gentoo.org> hydrogen-0.9.0_beta1.ebuild:
+  Added media-libs/flac dependency. Closes bug #60977.
 
 *hydrogen-0.9.0_beta1 (18 Aug 2004)
 
